// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup Component should handle multiple error message types: boolean error message 1`] = `
<formgroup
  props="{
  "id": "test",
  "error": true,
  "errorMessage": true,
  "children": [
    {
      "props": {
        "id": "test",
        "type": "text",
        "value": "",
        "readOnly": true
      },
      "type": "input"
    }
  ],
  "helperText": null,
  "fieldId": null
}"
>
  <div
    class="pf-v5-c-form__group"
    helpertextinvalid="Error"
    validated="error"
  >
    <div
      class="pf-v5-c-form__group-control"
    >
      <input
        id="test"
        readonly=""
        type="text"
        value=""
      />
    </div>
  </div>
</formgroup>
`;

exports[`FormGroup Component should handle multiple error message types: node error message 1`] = `
<formgroup
  props="{
  "id": "test",
  "error": true,
  "errorMessage": {
    "type": "span",
    "key": null,
    "ref": null,
    "props": {
      "children": "lorem ipsum"
    },
    "_owner": null,
    "_store": {}
  },
  "children": [
    {
      "props": {
        "id": "test",
        "type": "text",
        "value": "",
        "readOnly": true
      },
      "type": "input"
    }
  ],
  "helperText": null,
  "fieldId": null
}"
>
  <div
    class="pf-v5-c-form__group"
    helpertextinvalid="[object Object]"
    validated="error"
  >
    <div
      class="pf-v5-c-form__group-control"
    >
      <input
        id="test"
        readonly=""
        type="text"
        value=""
      />
    </div>
  </div>
</formgroup>
`;

exports[`FormGroup Component should handle multiple error message types: string error message 1`] = `
<formgroup
  props="{
  "id": "test",
  "error": true,
  "errorMessage": "lorem ipsum",
  "children": [
    {
      "props": {
        "id": "test",
        "type": "text",
        "value": "",
        "readOnly": true
      },
      "type": "input"
    }
  ],
  "helperText": null,
  "fieldId": null
}"
>
  <div
    class="pf-v5-c-form__group"
    helpertextinvalid="lorem ipsum"
    validated="error"
  >
    <div
      class="pf-v5-c-form__group-control"
    >
      <input
        id="test"
        readonly=""
        type="text"
        value=""
      />
    </div>
  </div>
</formgroup>
`;

exports[`FormGroup Component should render a basic component: basic formgroup 1`] = `
<formgroup
  props="{
  "label": "test",
  "id": "test",
  "children": [
    {
      "props": {
        "id": "test",
        "type": "text",
        "value": "",
        "readOnly": true
      },
      "type": "input"
    }
  ],
  "error": null,
  "errorMessage": null,
  "helperText": null,
  "fieldId": null
}"
>
  <div
    class="pf-v5-c-form__group"
    helpertextinvalid=""
    validated="default"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="test"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          test
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <input
        id="test"
        readonly=""
        type="text"
        value=""
      />
    </div>
  </div>
</formgroup>
`;

exports[`FormGroup Component should render a basic component: basic label 1`] = `
<label
  class="pf-v5-c-form__label"
  for="test"
>
  <span
    class="pf-v5-c-form__label-text"
  >
    test
  </span>
</label>
`;
